...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginTop="40dp" />

    <!-- Campo para inserir o nome do jogador -->
    <EditText
        android:id="@+id/edt_nome_jogador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/insira_seu_nome"
        android:inputType="text"
        android:textSize="16sp"
        android:background="@drawable/edt_borda_preta"
...
