...
        android:gravity="center_horizontal"
        android:minHeight="500dp"
        android:orientation="vertical"
        android:padding="22dp">

        <TextView
            android:id="@+id/txt_pergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:minHeight="120dp"
            android:text="@string/carregar_perguntas"
...
