appId: com.example.brainbrawl
---
- launchApp
- assertVisible: "Jogar Agora"

- tapOn: "Explorar Categorias"
- assertVisible: "Explorar Categorias"

- assertVisible: "Criar categoria"

- tapOn: "Minhas categorias"
- assertVisible: "Minhas categorias"

- pressKey: BACK
- assertVisible: "Explorar Categorias"

- pressKey: BACK
- assertVisible: "Jogar Agora"
