appId: com.example.brainbrawl
---
- runFlow: guest_login.yaml
- tapOn: "2x2\nAleatório"
- extendedWaitUntil:
    visible: "À procura de adversários..."
    timeout: 10000
- tapOn: "Cancelar"
- extendedWaitUntil:
    visible: "JOGAR AGORA"
    timeout: 10000
